src/test/ui/moves/moves-based-on-type-tuple.stderr
error[E0382]: use of moved value: `x` (Ast)
  --> $DIR/moves-based-on-type-tuple.rs:6:13
   |
LL |     box (x, x)
   |          -  ^ value used here after move
   |          |
   |          value moved here
   |
   = note: move occurs because `x` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `x` (Mir)
  --> $DIR/moves-based-on-type-tuple.rs:6:13
   |
LL |     box (x, x)
   |          -  ^ value used here after move
   |          |
   |          value moved here
   |
   = note: move occurs because `x` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0382`.
